--- a/sam.css
+++ b/sam.css
@@ -226,13 +226,20 @@ h5{
     text-decoration: none;
     border: 3px solid transparent;
     font-weight: bold;
-    /* padding: 9px 22px; */
+    padding: 12px;
+    /* margin-top: 30px; */
     border-radius: 30px;
     transition: .4s;
 
 }
 .card .button:hover{
+    /* width: 100%; */
     background-color: transparent;
-    border: 2px solid #f9004d;
+    border: 3px solid #f9004d;
     cursor: pointer;
+}
+
+.b-card{
+    text-align: center;
+    margin-top: 30px;
 }
